wdl-analysis/tests/validation/directory-type-unsupported.errors
error: use of the `Directory` type requires WDL version 1.2
  ┌─ tests/validation/directory-type-unsupported:6:5
  │
6 │     Directory x = "foo"
  │     ^^^^^^^^^

warning[UnusedDeclaration]: unused declaration `x`
  ┌─ tests/validation/directory-type-unsupported:6:15
  │
6 │     Directory x = "foo"
  │               ^

